Explicitly set a background color to address issues on mobile.

--- a/widgetco/src/styles.css
+++ b/widgetco/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color: white;
+}
+
 .column h4 {
     margin-bottom: 0px;
 }
